--- a/rustapi/Cargo.toml
+++ b/rustapi/Cargo.toml
@@ -13,6 +13,8 @@ crate-type = ["cdylib"]
 anyhow = "1"
 futures = "0.3.31"
 spin-sdk = "3.1.0"
-wit-bindgen = "0.32.0"
+wit-bindgen = "0.16.0"
+serde = { version = "1.0.217", features = ["derive"] }
+spin-executor = "3.1.0"
 
 [workspace]
