--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,7 @@
         "webpack-cli": "^4.10.0"
     },
     "dependencies": {
-        "@fermyon/spin-sdk": "^3.0.0",
+        "@fermyon/spin-sdk": "git+https://github.com/karthik2804/spin-js-sdk.git#membuffer_fix",
         "itty-router": "^5.0.18"
     }
 }
